kubernetes/apps/harbor/harbor/app/virtualservice.yaml
---
apiVersion: networking.istio.io/v1beta1
kind: VirtualService
metadata:
  name: harbor-ingress
  namespace: harbor
spec:
  hosts:
    - harbor.enchantednatures.com
  gateways:
    - istio-ingress/external-gateway
  http:
    - match:
        - uri:
            prefix: /api/
      route:
        - destination:
            host: harbor-core.harbor.svc.cluster.local
            port:
              number: 80
    - match:
        - uri:
            prefix: /service/
      route:
        - destination:
            host: harbor-core.harbor.svc.cluster.local
            port:
              number: 80
    - match:
        - uri:
            prefix: /v2/
      route:
        - destination:
            host: harbor-core.harbor.svc.cluster.local
            port:
              number: 80
    - match:
        - uri:
            prefix: /c/
      route:
        - destination:
            host: harbor-core.harbor.svc.cluster.local
            port:
              number: 80
    - match:
        - uri:
            prefix: /
      route:
        - destination:
            host: harbor-portal.harbor.svc.cluster.local
            port:
              number: 80
